[gd_scene load_steps=5 format=2]

[ext_resource path="res://Images/card_back.png" type="Texture" id=1]
[ext_resource path="res://Fonts/ubuntu-regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://Card.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 71, 101 )

[node name="Card" type="Area2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -1 )
shape = SubResource( 1 )

[node name="ValueLabel" type="Label" parent="."]
margin_left = -50.0
margin_top = -69.0
margin_right = 50.0
margin_bottom = -32.0
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SeedLabel" type="Label" parent="."]
margin_left = -50.0
margin_top = 38.0
margin_right = 50.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 2 )
text = "Clubs"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="input_event" from="." to="." method="_on_Card_input_event"]
